--- a/.github/workflows/linux_splunke_installer.yml
+++ b/.github/workflows/linux_splunke_installer.yml
@@ -1,4 +1,4 @@
-name: Test Splunk Installer - Linux
+name: Splunk Installer - Linux
 on: [push, pull_request]
 
 jobs:
@@ -8,8 +8,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Test Splunk Installer
       run: |
-        chmod +x splunk_installer.sh
-        ./splunk_installer.sh --version
+        chmod +x ../../BashScript/splunk_installer.sh
+        ../../BashScript/splunk_installer.sh --version
         sudo /opt/splunk/bin/splunk start --accept-license --answer-yes --no-prompt
         sudo /opt/splunk/bin/splunk status
         sudo netstat -tuln | grep 8000
