--- a/.github/workflows/linux_splunke_installer.yml
+++ b/.github/workflows/linux_splunke_installer.yml
@@ -8,8 +8,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Test Splunk Installer
       run: |
-        chmod +x ../../BashScript/splunk_installer.sh
-        ../../BashScript/splunk_installer.sh --version
+        chmod +x ${{ github.workspace }}/BashScript/splunk_installer.sh
+        ${{ github.workspace }}/BashScript/splunk_installer.sh --version
         sudo /opt/splunk/bin/splunk start --accept-license --answer-yes --no-prompt
         sudo /opt/splunk/bin/splunk status
         sudo netstat -tuln | grep 8000
