--- a/.github/workflows/linux_splunke_installer.yml
+++ b/.github/workflows/linux_splunke_installer.yml
@@ -8,7 +8,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Test Splunk Installer
       run: |
-        chmod +x ${{ github.workspace }}/BashScript/splunk_installer.sh
+        bash ${{ github.workspace }}/BashScript/splunk_installer.sh
         ${{ github.workspace }}/BashScript/splunk_installer.sh --version
         sudo /opt/splunk/bin/splunk start --accept-license --answer-yes --no-prompt
         sudo /opt/splunk/bin/splunk status
