--- a/.github/workflows/linux_splunke_installer.yml
+++ b/.github/workflows/linux_splunke_installer.yml
@@ -9,6 +9,6 @@ jobs:
     - name: Test Splunk Installer
       run: |
         chmod +x ./BashScripts/splunk_installer.sh
-        sudo /opt/splunk/bin/splunk start --accept-license --answer-yes --no-prompt
-        sudo /opt/splunk/bin/splunk status
+        sudo -S /opt/splunk/bin/splunk start --accept-license --answer-yes --no-prompt
+        sudo -S /opt/splunk/bin/splunk status
         sudo netstat -tuln | grep 8000
