--- a/.github/workflows/linux_splunke_installer.yml
+++ b/.github/workflows/linux_splunke_installer.yml
@@ -1,13 +1,13 @@
-# name: Splunk Installer - Linux
-# on: [push, pull_request]
+name: Splunk Installer - Linux
+on: [push, pull_request]
 
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Test Splunk Installer
-#       run: |
-#         chmod +x ./BashScripts/splunk_installer.sh
-#         sudo ./BashScripts/splunk_installer.sh
-#         nc -zv localhost 8000 && echo "Port 8000 is open" || echo "Port 8000 is closed"
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Test Splunk Installer
+      run: |
+        chmod +x ./BashScripts/splunk_installer.sh
+        sudo ./BashScripts/splunk_installer.sh
+        nc -zv localhost 8000 && echo "Port 8000 is open" || echo "Port 8000 is closed"
