--- a/.github/workflows/linux_splunke_installer.yml
+++ b/.github/workflows/linux_splunke_installer.yml
@@ -1,12 +1,11 @@
 name: Splunk Installer - Linux
+
 on: 
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
