--- a/.github/workflows/windows_splunke.yml
+++ b/.github/workflows/windows_splunke.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Splunk
-      run: powershell -command .\PowerShell\splunk_installer.ps1
+      run: powershell -command Scripts\BashScripts\splunk_installer.ps1
     
     - name: Test Splunk
       run: Test-NetConnection localhost -Port 8000
