--- a/.github/workflows/awx_installer.yml
+++ b/.github/workflows/awx_installer.yml
@@ -22,11 +22,6 @@ jobs:
       with:
         python-version: '3.x'
 
-    # - name: Install Docker and Docker-Compose
-    #   run: |
-    #     sudo apt-get update
-    #     sudo apt-get install -y docker.io docker-compose git
-
     - name: Run AWX Install Script
       run: |
         chmod +x Scripts/BashScripts/awx_installer.sh
@@ -34,15 +29,16 @@ jobs:
 
     - name: Wait for AWX to be up
       run: |
-        echo "Waiting for AWX to start..."
-        timeout 120 bash -c 'until echo > /dev/tcp/localhost/8080; do sleep 5; done'
+        # echo "Waiting for AWX to start..."
+        # timeout 120 bash -c 'until echo > /dev/tcp/localhost/8080; do sleep 5; done'
+        nc -zv app:8000 && echo "Port 8000 is open" || echo "Port 8000 is closed"
 
-    - name: Check if AWX is running on port 8080
-      run: |
-        response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080)
-        if [ "$response" -ne 200 ]; then
-          echo "AWX is not running on port 8080"
-          exit 1
-        else
-          echo "AWX is running on port 8080"
-        fi
+    # - name: Check if AWX is running on port 8080
+    #   run: |
+    #     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080)
+    #     if [ "$response" -ne 200 ]; then
+    #       echo "AWX is not running on port 8080"
+    #       exit 1
+    #     else
+    #       echo "AWX is running on port 8080"
+    #     fi
