--- a/.github/workflows/awx_installer.yml
+++ b/.github/workflows/awx_installer.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         # echo "Waiting for AWX to start..."
         # timeout 120 bash -c 'until echo > /dev/tcp/localhost/8080; do sleep 5; done'
-        nc -zv docker:8000 && echo "Port 8000 is open" || echo "Port 8000 is closed"
+        nc -zv docker 8000 && echo "Port 8000 is open" || echo "Port 8000 is closed"
 
     # - name: Check if AWX is running on port 8080
     #   run: |
