--- a/.github/workflows/awx_installer.yml
+++ b/.github/workflows/awx_installer.yml
@@ -33,12 +33,12 @@ jobs:
         # timeout 120 bash -c 'until echo > /dev/tcp/localhost/8080; do sleep 5; done'
         nc -zv docker 8000 && echo "Port 8000 is open" || echo "Port 8000 is closed"
 
-    # - name: Check if AWX is running on port 8080
-    #   run: |
-    #     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080)
-    #     if [ "$response" -ne 200 ]; then
-    #       echo "AWX is not running on port 8080"
-    #       exit 1
-    #     else
-    #       echo "AWX is running on port 8080"
-    #     fi
+    - name: Check if AWX is running on port 8080
+      run: |
+        response=$(curl -s -o /dev/null -w "%{http_code}" http://docker:8080)
+        if [ "$response" -ne 200 ]; then
+          echo "AWX is not running on port 8080"
+          exit 1
+        else
+          echo "AWX is running on port 8080"
+        fi
