--- a/.github/workflows/awx_installer.yml
+++ b/.github/workflows/awx_installer.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Wait for AWX to be up
       run: |
-       curl -s -o /dev/null -w "%{http_code}" http://docker:8080
+       curl -s -o http://docker:8080
     #     # echo "Waiting for AWX to start..."
     #     # timeout 120 bash -c 'until echo > /dev/tcp/localhost/8080; do sleep 5; done'
     #     nc -zv docker 8000 && echo "Port 8000 is open" || echo "Port 8000 is closed"
