adding Ansible playbook

--- a/Ansible/UniversalForwarder_DS.yaml
+++ b/Ansible/UniversalForwarder_DS.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy deploymentclient.conf to Splunk Universal Forwarder
-  hosts: universalforwarder
+  hosts: indexers
   become: yes
 
   tasks:
