adding Ansible playbook

--- a/Ansible/_UF_DS.yaml
+++ b/Ansible/_UF_DS.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy deploymentclient.conf to Splunk Universal Forwarder
-  hosts: indexers
+  hosts: universalforwarders
   become: yes
 
   tasks:
