--- a/Ansible/_UF_DC.yaml
+++ b/Ansible/_UF_DC.yaml
@@ -16,11 +16,11 @@
 
     - name: Copy deploymentclient.conf to Splunk directory
       copy:
-        src: "/tmp/splunk_deploymentclient_conf/SplunkConfigurations/EnvironmentTypes/Distributed/SingleSite/Splunk Universal Forwarder/deploymentclient.conf"
-        dest: "/opt/splunkforwarder/etc/system/local/deploymentclient.conf"
-        owner: splunk
-        group: splunk
+        src: "/tmp/splunk_deploymentclient_conf/SplunkConfigurations/UniversalForwarder/ta-uf_dc"
+        dest: "/opt/splunkforwarder/etc/apps/ta-uf_dc"
+        owner: splunk_user
+        group: splunk_user
         mode: '0644'
 
-    - name: Restart Splunk service
+    - name: Restart Splunk Forwarder service
       command: "/opt/splunkforwarder/bin/splunk restart"
