--- a/Ansible/_UF_DC.yaml
+++ b/Ansible/_UF_DC.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy deploymentclient.conf to Splunk Universal Forwarder
-  hosts: universalforwarders
+  hosts: universalforwarder
   become: yes
 
   tasks:
