--- a/Ansible/_UF_DC.yaml
+++ b/Ansible/_UF_DC.yaml
@@ -2,6 +2,8 @@
 - name: Deploy deploymentclient.conf to Splunk Universal Forwarder
   hosts: universalforwarder
   become: yes
+  become_user: splunk_user
+  
 
   tasks:
     - name: Ping all hosts
