start adding ansible

--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -3,6 +3,8 @@ inventory = ./inventory
 host_key_checking = False
 forks = 5
 timeout = 30
+# Specify User
+remote_user = splunk_user
 
 # [inventory]
 # enable_plugins = aws_ec2
