start adding ansible

--- a/Ansible/_UF_DC.yaml
+++ b/Ansible/_UF_DC.yaml
@@ -23,12 +23,6 @@
       #   owner: splunk_user
       #   group: splunk_user
       #   mode: '0644'
-      synchronize:
-        src: "/tmp/splunk_deploymentclient_conf/SplunkConfigurations/UniversalForwarder/ta-uf_dc"
-        dest: "/opt/splunkforwarder/etc/apps/ta-uf_dc"
-        # owner: splunk_user
-        # group: splunk_user
-        # mode: '0644'
-
+      shell: "cp -r /tmp/splunk_deploymentclient_conf/SplunkConfigurations/UniversalForwarder/ta-uf_dc /opt/splunkforwarder/etc/apps/ta-uf_dc"
     - name: Restart Splunk Forwarder service
       command: "/opt/splunkforwarder/bin/splunk restart"
