start adding ansible

--- a/AnsiblePlaybooks/_SH_Configs.yaml
+++ b/AnsiblePlaybooks/_SH_Configs.yaml
@@ -19,4 +19,5 @@
       systemd:
         name: Splunkd
         state: restarted
+        sudo: yes
       # command: "sudo systemctl restart Splunkd"
