--- a/AnsiblePlaybooks/_SH_Configs.yaml
+++ b/AnsiblePlaybooks/_SH_Configs.yaml
@@ -4,7 +4,7 @@
   become: yes
   become_user: splunk_user
   vars_files:
-    - ../vars/vars.yaml
+    - ./group_vars/all.yaml
 
   tasks:
     - name: Clone repository to /tmp
