--- a/AnsiblePlaybooks/_SH_Configs.yaml
+++ b/AnsiblePlaybooks/_SH_Configs.yaml
@@ -31,9 +31,9 @@
       command: "sudo systemctl restart Splunkd"
       register: splunk_restart
 
-    - name: Print Splunk Status
+    - name: Print Splunk Restart Status
       debug:
-        msg: "{{ splunk_restart.stdout_lines | grep 'Active:' }}"
+        msg: "{{ splunk_restart.stdout_lines}}"
 
     - name: Check Splunk Status service with systemd
       command: "sudo systemctl status Splunkd"
@@ -41,4 +41,4 @@
 
     - name: Print Splunk Status
       debug:
-        msg: "{{ splunk_status.stdout_lines | grep 'Active:'}}"
+        msg: "{{ splunk_status.stdout_lines }}"
